compiler-core/src/go/tests/snapshots/gleam_core__go__tests__recursion__shadowing_so_not_recursive.snap
---
source: compiler-core/src/go/tests/recursion.rs
expression: "\nfn map(map) {\n  map()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn map(map) {
  map()
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func mapʹ[K gleam_P.Type[K]](mapʹ gleam_P.Func0_t[K]) K {
  return mapʹ()
}
