compiler-core/src/go/tests/snapshots/gleam_core__go__tests__recursion__tco.snap
---
source: compiler-core/src/go/tests/recursion.rs
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> main(x - 1)\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> Nil
    _ -> main(x - 1)
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main(loop_x gleam_P.Int_t) gleam_P.Nil_t {
  for {
    var x gleam_P.Int_t = loop_x
    if gleam_P.Bool_t(x.Equal(0)) {
      return gleam_P.Nil_c{}
    } else {
      loop_x = x - 1
    }
  }
}
